--- a/index.html
+++ b/index.html
@@ -3,24 +3,46 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>El Canto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+
+    <!-- Tipos -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Instrument+Serif:ital@0;1&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
-    <Section class="elcanto">
+    <Section class="container my-5">
         <div class="row">
             <div class="col">
                 <h1>El canto</h1>
                 <div class="row">
-                    <div class="col">Lowkey Gaspar</div>
-                    <div class="col">Héctor Asesio</div>
+                    <div class="col-6">Lowkey Gaspar</div>
+                    <div class="col-6">Héctor Asesio</div>
                 </div>
                 <div class="row">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti sequi voluptates inventore blanditiis explicabo esse iure neque id atque eaque. Tempora deleniti provident molestiae magni optio laudantium dolorem amet dolorum!   sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8</div>
             </div>
         </div>
     </Section>
+    <section class="container my-5">
+      <div class="row">
+        <div class="col-6">
+          <div class="row">
+            <div class="col"></div>
+            <div class="col">
+              <div class="row">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut natus maxime amet reprehenderit odit voluptas voluptates alias dolorem eos quibusdam, non quis pariatur ipsa et quam, delectus molestiae corporis. Illo!</div>
+              <div class="row">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos cum, aperiam ex, culpa accusantium sint totam fugiat illum repellat quis, ut perspiciatis? Numquam ullam eaque sit modi quam ipsa animi.</div>
+            </div>
+          </div>
+        </div>
+        <div class="col-6">
+          <img src="media/img/layout.avif" alt="">
+        </div>
+      </div>
+
+    </section>
   </body>
 </html>
