--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Instrument+Serif:ital@0;1&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
 
   </head>
-  <body>
+  <body class="container-fluid-g0">
 
-    <Section class="container my-5">
+    <div class="container my-5">
         <div class="row">
             <div class="col">
                 <h1>El canto</h1>
@@ -26,23 +26,96 @@
                 <div class="row">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti sequi voluptates inventore blanditiis explicabo esse iure neque id atque eaque. Tempora deleniti provident molestiae magni optio laudantium dolorem amet dolorum!   sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8</div>
             </div>
         </div>
-    </Section>
-    <section class="container my-5">
+      </div>
+
+    <Section class="container-fluid-g0">
       <div class="row">
-        <div class="col-6">
+        <div class="col-3">
+          <img src="media/img/layout.avif" class="img-fluid" alt="">
+        </div>
+        <div class="col-3">
           <div class="row">
-            <div class="col"></div>
-            <div class="col">
-              <div class="row">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut natus maxime amet reprehenderit odit voluptas voluptates alias dolorem eos quibusdam, non quis pariatur ipsa et quam, delectus molestiae corporis. Illo!</div>
-              <div class="row">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos cum, aperiam ex, culpa accusantium sint totam fugiat illum repellat quis, ut perspiciatis? Numquam ullam eaque sit modi quam ipsa animi.</div>
-            </div>
+            <p class="text-start">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit nulla quaerat vero voluptate facere dignissimos expedita recusandae quasi neque quod libero, dicta quis inventore, enim magni velit ipsam iusto voluptatibus?
+            </p>
+          </div>
+          <div class="row">
+            <p class="text-end">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit nulla quaerat vero voluptate facere dignissimos expedita recusandae quasi neque quod libero, dicta quis inventore, enim magni velit ipsam iusto voluptatibus?
+            </p>
           </div>
         </div>
         <div class="col-6">
-          <img src="media/img/layout.avif" alt="">
+          <img src="media/img/layout.avif" class="img-fluid" alt="">
         </div>
       </div>
+    </Section>
 
+    <section class="container">
+      <div class="row">
+        <div class="col">
+        <div class="col-6"> <img src="media/img/layout.avif" class="img-fluid" alt=""></div>
+      </div>
+      <div class="col">
+        <h2>Lorem ipsum</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo porro, rerum expedita velit delectus dolore alias nisi. Minus similique illum sequi numquam nihil nesciunt, dolorum exercitationem quibusdam magni? Quaerat, quisquam.</p>
+        </div>
+      </div>
+      
     </section>
+
+    <section class="container">
+      <div class="row">
+        <img src="media/img/layout.avif" class="img-fluid" alt="">
+      </div>
+      <div class="row text-center">
+        <h1>Project</h1>
+      </div>
+    </section>
+
+    <section class="container">
+      <div class="row text-start">
+        <div class="col-4">
+          <h3>Lorem ipsum</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem quibusdam facere consequatur, sed, perferendis quaerat fugit consequuntur quod, officiis fugiat dicta illo harum totam maiores? Eius facere exercitationem blanditiis quod.</p>
+        </div>
+        <div class="col-8">
+          <img src="media/img/layout.avif" class="img-fluid" alt="">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col"> <img src="media/img/layout.avif" class="img-fluid" alt=""></div>
+        <div class="col"> <img src="media/img/layout.avif" class="img-fluid" alt=""></div>
+        <div class="col"> <img src="media/img/layout.avif" class="img-fluid" alt=""></div>
+      </div>
+    </section>
+
+    <section class="container">
+      <div class="row">
+        <div class="col">
+          <img src="media/img/layout.avif" class="img-fluid" alt="">
+        </div>
+        <div class="col">
+          <div class="row">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio itaque fugit hic, unde cupiditate sint, rem autem voluptatum alias consequuntur soluta. Dolore mollitia sequi autem error animi non accusamus laboriosam?</p>
+          </div>
+          <div class="row">
+            <div class="col"><p>Lorem ipsum</p></div>
+            <div class="col"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt architecto placeat officia alias quaerat inventore, nostrum praesentium perspiciatis ex dignissimos unde aliquam iste consequuntur possimus nam et doloribus, quisquam laudantium.</p></div>
+        <div class="col"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
+      </div>
+    </section>
+
+    <section class="container-fluid-g0">
+      <img src="media/img/layout.avif" class="img-fluid" alt="">
+    </section>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   </body>
 </html>
