--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body class="container-fluid-g0">
 
-    <div class="container my-5">
+    <div class="container-sm">
         <div class="row">
             <div class="col">
                 <h1>El canto</h1>
@@ -28,10 +28,34 @@
         </div>
       </div>
 
+
+    <section class="container-fluid-g0">
+      <div class="row">
+        <div class="col">
+          <div class="row">
+            <div class="col">
+              <img src="media/img/layout.avif" class="img-fluid float-start" alt="">
+            </div>
+            <div class="col">
+              <h2>Lorem ipsum</h2>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo quo deleniti unde, quidem vel quasi, voluptatem accusamus nam totam aperiam laudantium quisquam enim cumque, consequuntur optio. Cum nesciunt a eos.</p>
+            </div>
+          </div>
+          <div class="row align-items-end">
+            <div class="col"></div>
+            <div class="col"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque vel expedita error beatae minima natus. Illum corrupti voluptatem maxime expedita dolorum nihil iure accusantium eaque quaerat vitae perferendis, voluptates repudiandae?</p></div>
+          </div>
+        </div>
+        <div class="col">
+          <img src="media/img/layout.avif" class="img-fluid float-end" alt="">
+        </div>
+      </div>
+    </section>
+
     <Section class="container-fluid-g0">
       <div class="row">
         <div class="col-3">
-          <img src="media/img/layout.avif" class="img-fluid" alt="">
+          <img src="media/img/layout.avif" class="img-fluid float-start object-fit-fill" alt="">
         </div>
         <div class="col-3">
           <div class="row">
@@ -46,7 +70,7 @@
           </div>
         </div>
         <div class="col-6">
-          <img src="media/img/layout.avif" class="img-fluid" alt="">
+          <img src="media/img/layout.avif" class="img-fluid float-end" alt="">
         </div>
       </div>
     </Section>
