--- a/index.html
+++ b/index.html
@@ -28,36 +28,12 @@
         </div>
       </div>
 
-
-    <section class="container-fluid-g0">
+    <Section class="container-fluid">
       <div class="row">
-        <div class="col">
-          <div class="row">
-            <div class="col">
-              <img src="media/img/layout.avif" class="img-fluid float-start" alt="">
-            </div>
-            <div class="col">
-              <h2>Lorem ipsum</h2>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo quo deleniti unde, quidem vel quasi, voluptatem accusamus nam totam aperiam laudantium quisquam enim cumque, consequuntur optio. Cum nesciunt a eos.</p>
-            </div>
-          </div>
-          <div class="row align-items-end">
-            <div class="col"></div>
-            <div class="col"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque vel expedita error beatae minima natus. Illum corrupti voluptatem maxime expedita dolorum nihil iure accusantium eaque quaerat vitae perferendis, voluptates repudiandae?</p></div>
-          </div>
-        </div>
-        <div class="col">
-          <img src="media/img/layout.avif" class="img-fluid float-end" alt="">
-        </div>
-      </div>
-    </section>
-
-    <Section class="container-fluid-g0">
-      <div class="row">
-        <div class="col-3">
+        <div class="col-12 col-md-4 col-lg-3">
           <img src="media/img/layout.avif" class="img-fluid float-start object-fit-fill" alt="">
         </div>
-        <div class="col-3">
+        <div class="col-12 col-md-8 col-lg-3">
           <div class="row">
             <p class="text-start">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit nulla quaerat vero voluptate facere dignissimos expedita recusandae quasi neque quod libero, dicta quis inventore, enim magni velit ipsam iusto voluptatibus?
@@ -69,7 +45,7 @@
             </p>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-12 col-md-12 col-lg-6">
           <img src="media/img/layout.avif" class="img-fluid float-end" alt="">
         </div>
       </div>
@@ -85,7 +61,6 @@
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo porro, rerum expedita velit delectus dolore alias nisi. Minus similique illum sequi numquam nihil nesciunt, dolorum exercitationem quibusdam magni? Quaerat, quisquam.</p>
         </div>
       </div>
-      
     </section>
 
     <section class="container">
