Home-About-Project-80%Responsive

--- a/about.html
+++ b/about.html
@@ -17,31 +17,31 @@
   <body class="container-fluid-g0">
     
     <section class="container">
-        <div class="row text-center"><h1>El</h1></div>
+        <div class="row text-center"><h1 class="display-1">El</h1></div>
         <div class="row"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
-        <div class="row text-center"><h1>Canto</h1></div>
+        <div class="row text-center"><h1 class="display-1">Canto</h1></div>
     </section>
 
     <section class="container">
         <div class="row">
-            <div class="col-3">
+            <div class="col-10 col-md-4">
                 <img src="media/img/layout.avif" class="img-fluid" alt="">
             </div>
-            <div class="col-6">
+            <div class="col-12 col-md-8">
                 <h2>Lorem Ipsum</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo quaerat non, expedita ducimus quisquam eum, laboriosam doloribus, voluptatum inventore explicabo sed eos odit deserunt ab asperiores commodi sint necessitatibus ratione.</p>
             </div>
         </div>
         <div class="row">
-            <div class="col-5">
+            <div class="col-10 col-md-5">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit ipsam voluptatum aspernatur provident. Maiores voluptas quas, ipsam voluptates maxime quo tempore aspernatur incidunt sed beatae at adipisci minima itaque velit.</p>
             </div>
         </div>
         <div class="row">
-            <div class="col-8">
+            <div class="col-12 col-md-8">
                 <h4>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti tempora qui, hic quas quo dicta reiciendis animi ipsam non, ad eum explicabo saepe neque in ratione labore quos a quod.</h4>
             </div>
-            <div class="col-4">
+            <div class="col-12 col-md-4">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil eaque pariatur officiis earum minima harum odit quis fugiat fuga? Nobis dignissimos, voluptates recusandae aliquid excepturi quisquam sit. Voluptatem, quis aliquam.</p>
             </div>
         </div>
@@ -50,7 +50,7 @@
         </div>
     </section>
 
-    <section class="container-fluid-g0">
+    <section class="container-fluid">
         <div class="accordion accordion-flush" id="accordionFlushExample">
 
                 <div class="accordion-item">
