--- a/index.html
+++ b/index.html
@@ -14,21 +14,26 @@
 
   </head>
   <body class="container-fluid-g0">
+    
+    <div class="container pb-5"><div class="col-12"></div></div>
 
-    <div class="container-sm">
-        <div class="row">
+    <div class="container mb-3 justify-content-center">
+        <div class="row text-center ">
             <div class="col">
-                <h1>El canto</h1>
-                <div class="row">
-                    <div class="col-6">Lowkey Gaspar</div>
-                    <div class="col-6">Héctor Asesio</div>
+                <h1 class="display-1">El canto</h1>
+                <div class="row justify-content-center">
+                    <div class="col-2">Lowkey Gaspar</div>
+                    <div class="col-2">Héctor Asesio</div>
                 </div>
-                <div class="row">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti sequi voluptates inventore blanditiis explicabo esse iure neque id atque eaque. Tempora deleniti provident molestiae magni optio laudantium dolorem amet dolorum!   sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8</div>
+                <div class="row justify-content-center">
+                  <div class="col-8 col-md-6">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti sequi voluptates inventore blanditiis explicabo esse iure neque id atque eaque. Tempora deleniti provident molestiae magni optio laudantium dolorem amet dolorum!
+                  </div></div>
             </div>
         </div>
       </div>
 
-    <Section class="container-fluid">
+    <Section class="container-fluid mb-3">
       <div class="row">
         <div class="col-12 col-md-4 col-lg-3">
           <img src="media/img/layout.avif" class="img-fluid float-start object-fit-fill" alt="">
@@ -39,79 +44,82 @@
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit nulla quaerat vero voluptate facere dignissimos expedita recusandae quasi neque quod libero, dicta quis inventore, enim magni velit ipsam iusto voluptatibus?
             </p>
           </div>
-          <div class="row">
+          <div class="row mt-5">
             <p class="text-end">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit nulla quaerat vero voluptate facere dignissimos expedita recusandae quasi neque quod libero, dicta quis inventore, enim magni velit ipsam iusto voluptatibus?
             </p>
           </div>
         </div>
-        <div class="col-12 col-md-12 col-lg-6">
+        <div class="col-12 col-md-8 col-lg-6 justify-content-center mx-auto">
           <img src="media/img/layout.avif" class="img-fluid float-end" alt="">
         </div>
       </div>
     </Section>
 
-    <section class="container">
+    <section class="container mb-3">
       <div class="row">
-        <div class="col">
+        <div class="col-12 col-md-6">
         <div class="col-6"> <img src="media/img/layout.avif" class="img-fluid" alt=""></div>
       </div>
-      <div class="col">
+      <div class="col-12 col-md-6">
         <h2>Lorem ipsum</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo porro, rerum expedita velit delectus dolore alias nisi. Minus similique illum sequi numquam nihil nesciunt, dolorum exercitationem quibusdam magni? Quaerat, quisquam.</p>
         </div>
       </div>
     </section>
 
-    <section class="container">
+    <section class="container mb-3">
       <div class="row">
         <img src="media/img/layout.avif" class="img-fluid" alt="">
       </div>
       <div class="row text-center">
-        <h1>Project</h1>
+        <h1 class="display-1">Project</h1>
       </div>
     </section>
 
-    <section class="container">
-      <div class="row text-start">
-        <div class="col-4">
+    <section class="container mb-3">
+      <div class="row">
+        <div class="col-12 col-md-4">
           <h3>Lorem ipsum</h3>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem quibusdam facere consequatur, sed, perferendis quaerat fugit consequuntur quod, officiis fugiat dicta illo harum totam maiores? Eius facere exercitationem blanditiis quod.</p>
         </div>
-        <div class="col-8">
-          <img src="media/img/layout.avif" class="img-fluid" alt="">
+        <div class="col-12 col-md-8">
+          <img src="media/img/layout horizontal.jpg" class="img-fluid" alt="">
         </div>
-      </div>
-      <div class="row">
-        <div class="col"> <img src="media/img/layout.avif" class="img-fluid" alt=""></div>
-        <div class="col"> <img src="media/img/layout.avif" class="img-fluid" alt=""></div>
-        <div class="col"> <img src="media/img/layout.avif" class="img-fluid" alt=""></div>
       </div>
     </section>
+    <section class="container-fluid mb-3">
+      <div class="row gx-2">
+        <div class="col-6 col-md-4"> <img src="media/img/layout.avif" class="img-fluid" alt=""></div>
+        <div class="col-6 col-md-4"> <img src="media/img/layout.avif" class="img-fluid" alt=""></div>
+        <div class="col-12 col-md-4"> <img src="media/img/layout.avif" class="img-fluid" alt=""></div>
+      </div>
+    </section>
+    
 
-    <section class="container">
+    <section class="container mb-3">
       <div class="row">
-        <div class="col">
+        <div class="col-12 col-md-6">
           <img src="media/img/layout.avif" class="img-fluid" alt="">
         </div>
-        <div class="col">
+        <div class="col-12 col-md-6">
           <div class="row">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio itaque fugit hic, unde cupiditate sint, rem autem voluptatum alias consequuntur soluta. Dolore mollitia sequi autem error animi non accusamus laboriosam?</p>
           </div>
           <div class="row">
-            <div class="col"><p>Lorem ipsum</p></div>
-            <div class="col"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
+            <div class="col-12 col-md-6"><p>Lorem ipsum</p></div>
+            <div class="col-10 col-md-6 justify-content-center mx-auto my-3"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt architecto placeat officia alias quaerat inventore, nostrum praesentium perspiciatis ex dignissimos unde aliquam iste consequuntur possimus nam et doloribus, quisquam laudantium.</p></div>
-        <div class="col"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
+      <div class="row vh-5">
+        <div class="col-12 col-sm-6"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt architecto placeat officia alias quaerat inventore, nostrum praesentium perspiciatis ex dignissimos unde aliquam iste consequuntur possimus nam et doloribus, quisquam laudantium.</p></div>
+        <div class="col-12 col-sm-6"><img src="media/img/layout horizontal.jpg" class="img-fluid" alt=""></div>
       </div>
     </section>
 
-    <section class="container-fluid-g0">
-      <img src="media/img/layout.avif" class="img-fluid" alt="">
+    <section class="container-fluid-g0 mb-3">
+      <img src="media/img/layout horizontal.jpg" class="img-fluid" alt="">
     </section>
 
 
