--- a/project.html
+++ b/project.html
@@ -15,20 +15,20 @@
   </head>
   <body class="container-fluid-g0">
     
-    <section class="container text-center">
+    <section class="container text-center my-3">
         <h1>Project</h1>
     </section>
 
     <section class="container">
-        <img src="media/img/layout.avif" class="img-fluid" alt="">
+        <img src="media/img/layout horizontal.jpg" class="img-fluid" alt="">
     </section>
 
-    <Section class="container">
-        <div class="row">
-            <div class="col">
+    <Section class="container my-3">
+        <div class="row flex-md-row flex-column-reverse">
+            <div class="col-12 col-md-6">
                 <img src="media/img/layout.avif" class="img-fluid" alt="">
             </div>
-            <div class="col">
+            <div class="col-12 col-md-6">
                 <h2>Lorem Ipsum</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis reiciendis magni minus! Eveniet sed fugiat ipsum placeat possimus odio accusantium aliquam deserunt? Voluptatibus voluptates assumenda, id necessitatibus illum magnam delectus.</p>
             </div>
@@ -36,17 +36,16 @@
     </Section>
 
     <section class="container text-center">
-        <div class="row justify-content-md-center">
+        <div class="row justify-content-center">
             <div class="col-6">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex recusandae magni hic quia fuga deleniti sed quos sit? Ex, nam quo! Distinctio odio cupiditate cumque repellendus earum necessitatibus nihil illum.</p>
             </div>
         </div>
     </section>
 
-    <Section class="container">
+    <Section class="container my-3">
         <div class="row">
-            <div class="col-12 col-md-6"></div>
-            <div class="col-12 col-md-6"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
+            <div class="col-12 col-md-6 offset-md-6"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
             <div class="col-12 col-md-6">
                 <h2>Lorem ipsum</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, laudantium? Veniam neque ratione omnis dolorum tempore ex cupiditate quia qui mollitia excepturi dolore voluptatem sunt explicabo repellat, nesciunt reprehenderit architecto!</p>
@@ -55,7 +54,7 @@
         </div>
     </Section>
 
-    <section class="container">
+    <section class="container my-3">
         <div class="row justify-content-md-center">
             <div class="col-12 col-md-6">
                 <img src="media/img/layout.avif" class="img-fluid" alt="">
@@ -66,21 +65,56 @@
         </div>
     </section>
 
-    <section class="container-fluid-g0">
+    <section class="container-fluid-g0 my-3">
         <div class="row justify-content-md-start">
             <div class="col-12 col-md-8">
-                <div class="row">
-                    <img src="media/img/layout.avif" class="img-fluid" alt="">
-                    <img src="media/img/layout.avif" class="img-fluid" alt="">
+                <div class="row h-20">
+                    <img src="media/img/layout horizontal.jpg" class=".img-horizontal mb-3 " alt="">
+                    <img src="media/img/layout horizontal.jpg" class=".img-horizontal mb-3 " alt="">
                 </div>
             </div>
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-md-4 h-25">
                 <div class="row">
-                    <img src="media/img/layout.avif" class="img-fluid" alt="">
-                    <img src="media/img/layout.avif" class="img-fluid" alt="">
+                    <img src="media/img/layout.avif" class="img-fluid mb-3" alt="">
+                    <img src="media/img/layout.avif" class="img-fluid mb-3" alt="">
                 </div>
             </div>
+        </div>
+    </section>
 
+    <section class="container my-3">
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <div class="row">
+                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quam neque reiciendis dolorem. Dicta labore fugit quidem veniam aut qui facilis deserunt quibusdam itaque earum! Esse accusantium sit ad quae?</h3>
+                    <div class="col-12 col-md-6">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae harum error blanditiis nobis eius necessitatibus ut modi culpa tempore ipsa impedit quibusdam expedita maxime, doloremque temporibus illum cumque assumenda consequatur.</p>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus non fugiat, voluptates odio molestiae, maxime exercitationem illum eum aspernatur laborum fuga tempora voluptatem illo praesentium quaerat minus id porro hic!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6">
+                <img src="media/img/layout.avif" class="img-fluid" alt="">
+            </div>
+        </div>
+    </section>
+
+    <section class="container my-3">
+        <div class="row g-3">
+            <div class="col-6 col-md-3"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
+            <div class="col-6 col-md-3"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
+            <div class="col-6 col-md-3"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
+            <div class="col-6 col-md-3"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
+            <div class="col-6 col-md-3"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
+            <div class="col-6 col-md-3"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
+            <div class="col-6 col-md-3"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
+            <div class="col-6 col-md-3"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
+            <div class="col-6 col-md-3"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
+            <div class="col-6 col-md-3"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
+            <div class="col-6 col-md-3"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
+            <div class="col-6 col-md-3"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
         </div>
     </section>
 
