--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <Section class="container-fluid mb-3">
       <div class="row">
-        <div class="col-12 col-md-4 col-lg-3">
+        <div class="col-12 col-md-4 col-lg-3 ">
           <img src="media/img/layout.avif" class="img-fluid float-start object-fit-fill" alt="">
         </div>
         <div class="col-12 col-md-8 col-lg-3">
@@ -58,8 +58,9 @@
 
     <section class="container mb-3">
       <div class="row">
-        <div class="col-12 col-md-6">
+        <div class="col-12 col-md-6 position-relative">
         <div class="col-6"> <img src="media/img/layout.avif" class="img-fluid" alt=""></div>
+        <div class="col-6"> <img src="media/img/layout.avif" class="position-absolute bottom-0 end-0 w-50" alt=""></div>
       </div>
       <div class="col-12 col-md-6">
         <h2>Lorem ipsum</h2>
