Layout al 90% - Héctor

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     
     <section class="container">
         <div class="row text-center"><h1 class="display-1">El</h1></div>
-        <div class="row"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
+        <div class="row"><img src="media/img/layout.avif" class="img-fluid vh-50" alt=""></div>
         <div class="row text-center"><h1 class="display-1">Canto</h1></div>
     </section>
 
