--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     
     <div class="container pb-5"><div class="col-12"></div></div>
 
-    <div class="container mb-3 justify-content-center">
+    <div class="container mb-3 justify-content-center vh-50">
         <div class="row text-center ">
             <div class="col">
                 <h1 class="display-1">El canto</h1>
                 <div class="row justify-content-center">
-                    <div class="col-2">Lowkey Gaspar</div>
-                    <div class="col-2">Héctor Asesio</div>
+                    <div class="col-2 my-2">Lowkey Gaspar</div>
+                    <div class="col-2 my-2">Héctor Asesio</div>
                 </div>
                 <div class="row justify-content-center">
                   <div class="col-8 col-md-6">
@@ -56,11 +56,11 @@
       </div>
     </Section>
 
-    <section class="container mb-3">
-      <div class="row">
+    <section class="container mb-3 vh-50">
+      <div class="row h-100">
         <div class="col-12 col-md-6 position-relative">
         <div class="col-6"> <img src="media/img/layout.avif" class="img-fluid" alt=""></div>
-        <div class="col-6"> <img src="media/img/layout.avif" class="position-absolute bottom-0 end-0 w-50" alt=""></div>
+        <div class="col-6"> <img src="media/img/layout.avif" class="position-absolute bottom-0 end-0 w-50 " alt=""></div>
       </div>
       <div class="col-12 col-md-6">
         <h2>Lorem ipsum</h2>
@@ -69,9 +69,10 @@
       </div>
     </section>
 
-    <section class="container mb-3">
-      <div class="row">
-        <img src="media/img/layout.avif" class="img-fluid" alt="">
+    <section class="container-fluid-g0 mb-3">
+      <div class="row position-relative">
+        <img src="media/img/layout.avif" class="img-fluid vh-50" alt="">
+        <img src="media/img/layout.avif" class="w-25 h-50 position-absolute top-50 end-0 m-5 d-none d-md-block" alt="">
       </div>
       <div class="row text-center">
         <h1 class="display-1">Project</h1>
@@ -119,8 +120,11 @@
       </div>
     </section>
 
-    <section class="container-fluid-g0 mb-3">
-      <img src="media/img/layout horizontal.jpg" class="img-fluid" alt="">
+    <section class="container-fluid p-3">
+      <div class="row justify-content-center position-relative">
+        <img src="media/img/layout horizontal.jpg" class="img-fluid vh-100" alt="">
+        <img src="media/img/layout.avif" class="w-25 h-50 position-absolute top-0 end-0 m-5 d-none d-md-block" alt="">
+      </div>
     </section>
 
 
