--- a/project.html
+++ b/project.html
@@ -13,14 +13,18 @@
 <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Instrument+Serif:ital@0;1&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
 
   </head>
-  <body class="container-fluid-g0">
+  <body class="container-fluid">
     
     <section class="container text-center my-3">
         <h1>Project</h1>
     </section>
 
-    <section class="container">
-        <img src="media/img/layout horizontal.jpg" class="img-fluid" alt="">
+    <section class="container-fluid p-4">
+        <div class="row justify-content-center position-relative">
+            <img src="media/img/layout horizontal.jpg" class="img-fluid" alt="">
+            <img src="media/img/layout.avif" class="w-25 h-50 position-absolute bottom-0 end-0 p-5 d-none d-md-block" alt="">
+        </div>
+        
     </section>
 
     <Section class="container my-3">
