--- a/index.html
+++ b/index.html
@@ -12,46 +12,47 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Instrument+Serif:ital@0;1&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
 
+<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body class="container-fluid-g0">
     
     <div class="container pb-5"><div class="col-12"></div></div>
 
-    <div class="container mb-3 justify-content-center vh-50">
+    <div class="container mb-3 justify-content-center vh-50" >
         <div class="row text-center ">
             <div class="col">
-                <h1 class="display-1">El canto</h1>
+                <h1 class="display-1" data-aos="zoom-in" data-aos-offset="100" data-aos-delay="50" data-aos-duration="400" data-aos-easing="ease-in-out">El canto</h1>
                 <div class="row justify-content-center">
-                    <div class="col-2 my-2">Lowkey Gaspar</div>
-                    <div class="col-2 my-2">Héctor Asesio</div>
+                    <div class="col-2 my-2" data-aos="zoom-in" data-aos-offset="0" data-aos-delay="200" data-aos-duration="500" data-aos-easing="ease-in-out">Lowkey Gaspar</div>
+                    <div class="col-2 my-2" data-aos="zoom-in" data-aos-offset="0" data-aos-delay="200" data-aos-duration="500" data-aos-easing="ease-in-out">Héctor Asesio</div>
                 </div>
                 <div class="row justify-content-center">
-                  <div class="col-8 col-md-6">
+                  <div class="col-8 col-md-6" data-aos="zoom-in" data-aos-offset="100" data-aos-delay="300" data-aos-duration="700" data-aos-easing="ease-in-out">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti sequi voluptates inventore blanditiis explicabo esse iure neque id atque eaque. Tempora deleniti provident molestiae magni optio laudantium dolorem amet dolorum!
                   </div></div>
             </div>
         </div>
       </div>
 
-    <Section class="container-fluid mb-3">
+    <Section class="container-fluid mb-3" >
       <div class="row">
         <div class="col-12 col-md-4 col-lg-3 ">
-          <img src="media/img/layout.avif" class="img-fluid float-start object-fit-fill" alt="">
+          <img src="media/img/layout.avif" class="img-fluid float-start object-fit-fill" alt="" data-aos="fade-right" data-aos-offset="500" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
         </div>
         <div class="col-12 col-md-8 col-lg-3">
-          <div class="row">
+          <div class="row" data-aos="fade-right" data-aos-offset="500" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
             <p class="text-start">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit nulla quaerat vero voluptate facere dignissimos expedita recusandae quasi neque quod libero, dicta quis inventore, enim magni velit ipsam iusto voluptatibus?
             </p>
           </div>
-          <div class="row mt-5">
-            <p class="text-end">
+          <div class="row mt-5" data-aos="fade-left" data-aos-offset="300" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
+            <p class="text-end" >
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit nulla quaerat vero voluptate facere dignissimos expedita recusandae quasi neque quod libero, dicta quis inventore, enim magni velit ipsam iusto voluptatibus?
             </p>
           </div>
         </div>
         <div class="col-12 col-md-8 col-lg-6 justify-content-center mx-auto">
-          <img src="media/img/layout.avif" class="img-fluid float-end" alt="">
+          <img src="media/img/layout.avif" class="img-fluid float-end" alt="" data-aos="fade-left" data-aos-offset="500" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
         </div>
       </div>
     </Section>
@@ -59,20 +60,20 @@
     <section class="container mb-3 vh-50">
       <div class="row h-100">
         <div class="col-12 col-md-6 position-relative">
-        <div class="col-6"> <img src="media/img/layout.avif" class="img-fluid" alt=""></div>
-        <div class="col-6"> <img src="media/img/layout.avif" class="position-absolute bottom-0 end-0 w-50 " alt=""></div>
+        <div class="col-6"> <img src="media/img/layout.avif" class="img-fluid" alt="" data-aos="fade-up" data-aos-offset="500" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out"></div>
+        <div class="col-6"> <img src="media/img/layout.avif" class="position-absolute bottom-0 end-0 w-50 " alt="" data-aos="fade-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out"></div>
       </div>
       <div class="col-12 col-md-6">
-        <h2>Lorem ipsum</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo porro, rerum expedita velit delectus dolore alias nisi. Minus similique illum sequi numquam nihil nesciunt, dolorum exercitationem quibusdam magni? Quaerat, quisquam.</p>
+        <h2 data-aos="fade-up" data-aos-offset="500" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">Lorem ipsum</h2>
+        <p data-aos="fade-up" data-aos-offset="500" data-aos-delay="150" data-aos-duration="500" data-aos-easing="ease-in-out">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo porro, rerum expedita velit delectus dolore alias nisi. Minus similique illum sequi numquam nihil nesciunt, dolorum exercitationem quibusdam magni? Quaerat, quisquam.</p>
         </div>
       </div>
     </section>
 
     <section class="container-fluid-g0 mb-3">
       <div class="row position-relative">
-        <img src="media/img/layout.avif" class="img-fluid vh-50" alt="">
-        <img src="media/img/layout.avif" class="w-25 h-50 position-absolute top-50 end-0 m-5 d-none d-md-block" alt="">
+        <img src="media/img/layout.avif" class="img-fluid p-0 vh-50" alt="" data-aos="fade-right" data-aos-offset="500" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
+        <img src="media/img/layout.avif" class="w-25 h-50 position-absolute top-50 end-0 m-5 d-none d-md-block" alt="" data-aos="fade-left" data-aos-offset="100" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
       </div>
       <div class="row text-center">
         <h1 class="display-1">Project</h1>
@@ -127,7 +128,16 @@
       </div>
     </section>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@latest/dist/lenis.min.js"></script>
+    <script src="js/lenis-init.js"></script>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+
+        <script src="js/script.js"></script>
+
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+          AOS.init();
+        </script>
     </body>
 </html>
