--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
-  <body class="container-fluid-g0">
+  <body class="container-fluid-g0 overflow-hidden">
     
     <div class="container pb-5"><div class="col-12"></div></div>
 
@@ -23,12 +23,11 @@
             <div class="col">
                 <h1 class="display-1" data-aos="zoom-in" data-aos-offset="100" data-aos-delay="50" data-aos-duration="400" data-aos-easing="ease-in-out">El canto</h1>
                 <div class="row justify-content-center">
-                    <div class="col-2 my-2" data-aos="zoom-in" data-aos-offset="0" data-aos-delay="200" data-aos-duration="500" data-aos-easing="ease-in-out">Lowkey Gaspar</div>
-                    <div class="col-2 my-2" data-aos="zoom-in" data-aos-offset="0" data-aos-delay="200" data-aos-duration="500" data-aos-easing="ease-in-out">Héctor Asesio</div>
+                    <div class="col-2 my-2 gf" data-aos="zoom-in" data-aos-offset="0" data-aos-delay="200" data-aos-duration="500" data-aos-easing="ease-in-out">Lowkey Gaspar</div>
+                    <div class="col-2 my-2 hf" data-aos="zoom-in" data-aos-offset="0" data-aos-delay="200" data-aos-duration="500" data-aos-easing="ease-in-out">Héctor Asesio</div>
                 </div>
                 <div class="row justify-content-center">
-                  <div class="col-8 col-md-6" data-aos="zoom-in" data-aos-offset="100" data-aos-delay="300" data-aos-duration="700" data-aos-easing="ease-in-out">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti sequi voluptates inventore blanditiis explicabo esse iure neque id atque eaque. Tempora deleniti provident molestiae magni optio laudantium dolorem amet dolorum!
+                  <div class="col-8 col-md-6" data-aos="zoom-in" data-aos-offset="100" data-aos-delay="300" data-aos-duration="700" data-aos-easing="ease-in-out"> <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti sequi voluptates inventore blanditiis explicabo esse iure neque id atque eaque. Tempora deleniti provident molestiae magni optio laudantium dolorem amet dolorum!</p>
                   </div></div>
             </div>
         </div>
@@ -37,7 +36,7 @@
     <Section class="container-fluid mb-3" >
       <div class="row">
         <div class="col-12 col-md-4 col-lg-3 ">
-          <img src="media/img/layout.avif" class="img-fluid float-start object-fit-fill" alt="" data-aos="fade-right" data-aos-offset="500" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
+          <img src="media/img/layout.avif" class="img-fluid float-start object-fit-fill" alt="" data-aos="fade-right" data-aos-offset="500" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out">
         </div>
         <div class="col-12 col-md-8 col-lg-3">
           <div class="row" data-aos="fade-right" data-aos-offset="500" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
@@ -76,17 +75,17 @@
         <img src="media/img/layout.avif" class="w-25 h-50 position-absolute top-50 end-0 m-5 d-none d-md-block" alt="" data-aos="fade-left" data-aos-offset="100" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
       </div>
       <div class="row text-center">
-        <h1 class="display-1">Project</h1>
+        <h1 class="display-1" data-aos="fade-down" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out">Project</h1>
       </div>
     </section>
 
     <section class="container mb-3">
       <div class="row">
         <div class="col-12 col-md-4">
-          <h3>Lorem ipsum</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem quibusdam facere consequatur, sed, perferendis quaerat fugit consequuntur quod, officiis fugiat dicta illo harum totam maiores? Eius facere exercitationem blanditiis quod.</p>
+          <h3 data-aos="fade-right" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out">Lorem ipsum</h3>
+          <p data-aos="fade-right" data-aos-offset="100" data-aos-delay="100" data-aos-duration="500" data-aos-easing="ease-in-out">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem quibusdam facere consequatur, sed, perferendis quaerat fugit consequuntur quod, officiis fugiat dicta illo harum totam maiores? Eius facere exercitationem blanditiis quod.</p>
         </div>
-        <div class="col-12 col-md-8">
+        <div class="col-12 col-md-8" data-aos="fade-left" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out">
           <img src="media/img/layout horizontal.jpg" class="img-fluid" alt="">
         </div>
       </div>
@@ -102,29 +101,29 @@
 
     <section class="container mb-3">
       <div class="row">
-        <div class="col-12 col-md-6">
+        <div class="col-12 col-md-6" data-aos="fade-right" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out">
           <img src="media/img/layout.avif" class="img-fluid" alt="">
         </div>
         <div class="col-12 col-md-6">
           <div class="row">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio itaque fugit hic, unde cupiditate sint, rem autem voluptatum alias consequuntur soluta. Dolore mollitia sequi autem error animi non accusamus laboriosam?</p>
+            <p data-aos="fade-left" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio itaque fugit hic, unde cupiditate sint, rem autem voluptatum alias consequuntur soluta. Dolore mollitia sequi autem error animi non accusamus laboriosam?</p>
           </div>
           <div class="row">
-            <div class="col-12 col-md-6"><p>Lorem ipsum</p></div>
-            <div class="col-10 col-md-6 justify-content-center mx-auto my-3"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
+            <div class="col-12 col-md-6" data-aos="fade-down" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out"><p >Lorem ipsum</p></div>
+            <div class="col-10 col-md-6 justify-content-center mx-auto my-3" data-aos="fade-up" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
           </div>
         </div>
       </div>
       <div class="row vh-5">
-        <div class="col-12 col-sm-6"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt architecto placeat officia alias quaerat inventore, nostrum praesentium perspiciatis ex dignissimos unde aliquam iste consequuntur possimus nam et doloribus, quisquam laudantium.</p></div>
-        <div class="col-12 col-sm-6"><img src="media/img/layout horizontal.jpg" class="img-fluid" alt=""></div>
+        <div class="col-12 col-sm-6" data-aos="fade-up" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt architecto placeat officia alias quaerat inventore, nostrum praesentium perspiciatis ex dignissimos unde aliquam iste consequuntur possimus nam et doloribus, quisquam laudantium.</p></div>
+        <div class="col-12 col-sm-6" data-aos="fade-down" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out"><img src="media/img/layout horizontal.jpg" class="img-fluid" alt=""></div>
       </div>
     </section>
 
     <section class="container-fluid p-3">
       <div class="row justify-content-center position-relative">
-        <img src="media/img/layout horizontal.jpg" class="img-fluid vh-100" alt="">
-        <img src="media/img/layout.avif" class="w-25 h-50 position-absolute top-0 end-0 m-5 d-none d-md-block" alt="">
+        <img src="media/img/layout horizontal.jpg" class="img-fluid vh-100" alt="" data-aos="fade-up" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out">
+        <img src="media/img/layout.avif" class="w-25 h-50 position-absolute top-0 end-0 m-5 d-none d-md-block" alt="" data-aos="fade-down" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out">
       </div>
     </section>
 
