--- a/index.html
+++ b/index.html
@@ -15,10 +15,29 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body class="container-fluid-g0 overflow-hidden">
-    
-    <div class="container pb-5"><div class="col-12"></div></div>
 
-    <div class="container mb-3 justify-content-center vh-50" >
+    <nav class="navbar sticky-top bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">About</a>
+        <a class="navbar-brand" href="#">EL</a>
+        <a class="navbar-brand" href="#">
+          <div id="f1_container">
+            <div id="f1_card" class="shadow">
+              <div class="front face">
+              <img src="media/img/layout.avif" class="img-responsive">
+              </div>
+              <div class="back face center">
+              <img src="media/img/layout.avif" class="img-responsive">
+              </div>
+            </div>
+          </div>
+        </a>
+        <a class="navbar-brand" href="#">CANTO</a>
+        <a class="navbar-brand" href="#">Tienda</a>
+      </div>
+    </nav>
+  
+    <div class="container mb-3 justify-content-center" >
         <div class="row text-center ">
             <div class="col">
                 <h1 class="display-1" data-aos="zoom-in" data-aos-offset="100" data-aos-delay="50" data-aos-duration="400" data-aos-easing="ease-in-out">El canto</h1>
@@ -56,7 +75,7 @@
       </div>
     </Section>
 
-    <section class="container mb-3 vh-50">
+    <section class="container mb-3">
       <div class="row h-100">
         <div class="col-12 col-md-6 position-relative">
         <div class="col-6"> <img src="media/img/layout.avif" class="img-fluid" alt="" data-aos="fade-up" data-aos-offset="500" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out"></div>
@@ -71,7 +90,7 @@
 
     <section class="container-fluid-g0 mb-3">
       <div class="row position-relative">
-        <img src="media/img/layout.avif" class="img-fluid p-0 vh-50" alt="" data-aos="fade-right" data-aos-offset="500" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
+        <img src="media/img/layout.avif" class="img-fluid p-0" alt="" data-aos="fade-right" data-aos-offset="500" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
         <img src="media/img/layout.avif" class="w-25 h-50 position-absolute top-50 end-0 m-5 d-none d-md-block" alt="" data-aos="fade-left" data-aos-offset="100" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
       </div>
       <div class="row text-center">
@@ -114,7 +133,7 @@
           </div>
         </div>
       </div>
-      <div class="row vh-5">
+      <div class="row">
         <div class="col-12 col-sm-6" data-aos="fade-up" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt architecto placeat officia alias quaerat inventore, nostrum praesentium perspiciatis ex dignissimos unde aliquam iste consequuntur possimus nam et doloribus, quisquam laudantium.</p></div>
         <div class="col-12 col-sm-6" data-aos="fade-down" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out"><img src="media/img/layout horizontal.jpg" class="img-fluid" alt=""></div>
       </div>
