--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
 
     <nav class="navbar sticky-top bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">About</a>
-        <a class="navbar-brand" href="#">EL</a>
-        <a class="navbar-brand" href="#">
-          <div id="f1_container">
+        <a class="navbar-brand" href="about.html">About</a>
+        <a class="navbar-brand moneda" href="#"><div id="f1_container">
             <div id="f1_card" class="shadow">
               <div class="front face">
               <img src="media/img/layout.avif" class="img-responsive">
@@ -30,10 +28,8 @@
               <img src="media/img/layout.avif" class="img-responsive">
               </div>
             </div>
-          </div>
-        </a>
-        <a class="navbar-brand" href="#">CANTO</a>
-        <a class="navbar-brand" href="#">Tienda</a>
+          </div></a>
+        <a class="navbar-brand" href="shop.html">Tienda</a>
       </div>
     </nav>
   
