--- a/project.html
+++ b/project.html
@@ -15,8 +15,25 @@
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
   </head>
-  <body class="container-fluid">
+  <body class="container-fluid-g0">
     
+    <nav class="navbar sticky-top bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="about.html">About</a>
+          <a class="navbar-brand moneda" href="index.html"><div id="f1_container">
+              <div id="f1_card" class="shadow">
+                <div class="front face">
+                <img src="media/img/layout.avif" class="img-responsive">
+                </div>
+                <div class="back face center">
+                <img src="media/img/layout.avif" class="img-responsive">
+                </div>
+              </div>
+            </div></a>
+          <a class="navbar-brand" href="shop.html">Tienda</a>
+        </div>
+      </nav>
+
     <section class="container text-center my-3">
         <h1 data-aos="zoom-in" data-aos-offset="100" data-aos-delay="50" data-aos-duration="200" data-aos-easing="ease-in-out">Project</h1>
     </section>
