--- a/about.html
+++ b/about.html
@@ -16,6 +16,23 @@
     
   <body class="container-fluid-g0">
     
+    <nav class="navbar sticky-top bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="about.html">About</a>
+        <a class="navbar-brand moneda" href="index.html"><div id="f1_container">
+            <div id="f1_card" class="shadow">
+              <div class="front face">
+              <img src="media/img/layout.avif" class="img-responsive">
+              </div>
+              <div class="back face center">
+              <img src="media/img/layout.avif" class="img-responsive">
+              </div>
+            </div>
+          </div></a>
+        <a class="navbar-brand" href="shop.html">Tienda</a>
+      </div>
+    </nav>
+
     <section class="container">
         <div class="row text-center"><h1 class="display-1">El</h1></div>
         <div class="row"><img src="media/img/layout.avif" class="img-fluid vh-50" alt=""></div>
