--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <div class="col-2 my-2 hf" data-aos="zoom-in" data-aos-offset="0" data-aos-delay="200" data-aos-duration="500" data-aos-easing="ease-in-out">Héctor Asesio</div>
                 </div>
                 <div class="row justify-content-center">
-                  <div class="col-8 col-md-6" data-aos="zoom-in" data-aos-offset="100" data-aos-delay="300" data-aos-duration="700" data-aos-easing="ease-in-out"> <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti sequi voluptates inventore blanditiis explicabo esse iure neque id atque eaque. Tempora deleniti provident molestiae magni optio laudantium dolorem amet dolorum!</p>
+                  <div class="col-8 col-md-6" data-aos="zoom-in" data-aos-offset="100" data-aos-delay="300" data-aos-duration="700" data-aos-easing="ease-in-out"> <p class="text">              El Canto nace del encuentro entre dos mentes que miran el mundo desde perspectivas similares pero con enfoques opuestos.  Gracias a ese contraste, del choque de estéticas y formas de sentir, es donde surge la verdadera creatividad. El canto de la moneda. </p>
                   </div></div>
             </div>
         </div>
@@ -56,7 +56,7 @@
         <div class="col-12 col-md-8 col-lg-3">
           <div class="row" data-aos="fade-right" data-aos-offset="500" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
             <p class="text-start">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit nulla quaerat vero voluptate facere dignissimos expedita recusandae quasi neque quod libero, dicta quis inventore, enim magni velit ipsam iusto voluptatibus?
+              El Canto nace del encuentro entre dos mentes que miran el mundo desde perspectivas similares pero con enfoques opuestos.  Gracias a ese contraste, del choque de estéticas y formas de sentir, es donde surge la verdadera creatividad. El canto de la moneda.
             </p>
           </div>
           <div class="row mt-5" data-aos="fade-left" data-aos-offset="300" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
@@ -141,6 +141,46 @@
         <img src="media/img/layout.avif" class="w-25 h-50 position-absolute top-0 end-0 m-5 d-none d-md-block" alt="" data-aos="fade-down" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out">
       </div>
     </section>
+<section class="footer"> 
+<footer class="footer-enhanced py-5 mt-5" data-aos="fade-up">
+  <div class="container">
+    <div class="row gy-4">
+
+      <div class="col-md-4">
+        <h5 class="text-uppercase mb-3">El Canto</h5>
+        <p class="small opacity-75">
+          Un proyecto donde dos perfiles creativos opuestos se encuentran para crear algo único.
+        </p>
+      </div>
+
+      <div class="col-md-4">
+        <h6 class="text-uppercase mb-3">Enlaces</h6>
+        <ul class="list-unstyled small">
+          <li><a href="index.html" class="footer-link">Inicio</a></li>
+          <li><a href="about.html" class="footer-link">Sobre Nosotros</a></li>
+          <li><a href="project.html" class="footer-link">Proyectos</a></li>
+          <li><a href="shop.html" class="footer-link">Tienda</a></li>
+        </ul>
+      </div>
+
+      <div class="col-md-4">
+        <h6 class="text-uppercase mb-3">Contacto</h6>
+        <p class="small opacity-75 mb-1">creativo@elcanto.com</p>
+        <p class="small opacity-75">Madrid, España</p>
+      </div>
+
+    </div>
+
+    <div class="text-center pt-4 mt-4 border-top">
+      <p class="small mb-0 opacity-75">
+        © 2025 El Canto — Todos los derechos no están reservados
+      </p>
+    </div>
+  </div>
+</footer>
+
+</section>
+
 
     <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@latest/dist/lenis.min.js"></script>
     <script src="js/lenis-init.js"></script>
