--- a/shop.html
+++ b/shop.html
@@ -15,19 +15,17 @@
   </head>
   <body class="container-fluid-g0">
 
-    <nav class="navbar sticky-top bg-body-tertiary">
+    <nav class="navbar sticky-top bg-body-tertiary overflow-hidden">
       <div class="container-fluid">
         <a class="navbar-brand" href="about.html">About</a>
-        <a class="navbar-brand moneda" href="index.html"><div id="f1_container">
-            <div id="f1_card" class="shadow">
-              <div class="front face">
-              <img src="media/img/layout.avif" class="img-responsive">
+        <a class="navbar-brand m-0 p-0" href="index.html">
+          <div class="flip-container g-0 align-middle">
+              <div class="flipper">
+                <img src="media/img/moneda-1.png" class="front" alt="Logo principal">
+                <img src="media/img/moneda-2.png" class="back" alt="Logo reverso">
               </div>
-              <div class="back face center">
-              <img src="media/img/layout.avif" class="img-responsive">
-              </div>
-            </div>
-          </div></a>
+          </div>
+        </a>
         <a class="navbar-brand" href="shop.html">Tienda</a>
       </div>
     </nav>
