--- a/about.html
+++ b/about.html
@@ -16,26 +16,24 @@
     
   <body class="container-fluid-g0">
     
-    <nav class="navbar sticky-top bg-body-tertiary">
+    <nav class="navbar sticky-top bg-body-tertiary overflow-hidden">
       <div class="container-fluid">
         <a class="navbar-brand" href="about.html">About</a>
-        <a class="navbar-brand moneda" href="index.html"><div id="f1_container">
-            <div id="f1_card" class="shadow">
-              <div class="front face">
-              <img src="media/img/layout.avif" class="img-responsive">
+        <a class="navbar-brand m-0 p-0" href="index.html">
+          <div class="flip-container g-0 align-middle">
+              <div class="flipper">
+                <img src="media/img/moneda-1.png" class="front" alt="Logo principal">
+                <img src="media/img/moneda-2.png" class="back" alt="Logo reverso">
               </div>
-              <div class="back face center">
-              <img src="media/img/layout.avif" class="img-responsive">
-              </div>
-            </div>
-          </div></a>
+          </div>
+        </a>
         <a class="navbar-brand" href="shop.html">Tienda</a>
       </div>
     </nav>
 
-    <section class="container">
+    <section class="container justify-content-center overflow-hidden vh-100">
         <div class="row text-center"><h1 class="display-1">El</h1></div>
-        <div class="row"><img src="media/img/layout.avif" class="img-fluid vh-50" alt=""></div>
+        <div class="row"><img src="media/img/layout horizontal.jpg" class="img-fluid vh-50" alt=""></div>
         <div class="row text-center"><h1 class="display-1">Canto</h1></div>
     </section>
 
