--- a/index.html
+++ b/index.html
@@ -16,62 +16,60 @@
   </head>
   <body class="container-fluid-g0 overflow-hidden">
 
-    <nav class="navbar sticky-top bg-body-tertiary">
+    <nav class="navbar sticky-top bg-body-tertiary overflow-hidden">
       <div class="container-fluid">
         <a class="navbar-brand" href="about.html">About</a>
-        <a class="navbar-brand moneda" href="#"><div id="f1_container">
-            <div id="f1_card" class="shadow">
-              <div class="front face">
-              <img src="media/img/layout.avif" class="img-responsive">
+        <a class="navbar-brand m-0 p-0" href="index.html">
+          <div class="flip-container g-0 align-middle">
+              <div class="flipper">
+                <img src="media/img/moneda-1.png" class="front" alt="Logo principal">
+                <img src="media/img/moneda-2.png" class="back" alt="Logo reverso">
               </div>
-              <div class="back face center">
-              <img src="media/img/layout.avif" class="img-responsive">
-              </div>
-            </div>
-          </div></a>
+          </div>
+        </a>
         <a class="navbar-brand" href="shop.html">Tienda</a>
       </div>
     </nav>
   
-    <div class="container mb-3 justify-content-center" >
-        <div class="row text-center ">
+    <div class="container justify-content-center overflow-hidden vh-100 d-flex align-items-center" >
+        <div class="row text-center mx-auto">
             <div class="col">
-                <h1 class="display-1" data-aos="zoom-in" data-aos-offset="100" data-aos-delay="50" data-aos-duration="400" data-aos-easing="ease-in-out">El canto</h1>
+                <h1 class="display-1" data-aos="zoom-in" data-aos-offset="100" data-aos-delay="0" data-aos-duration="400" data-aos-easing="ease-in-out">El canto</h1>
                 <div class="row justify-content-center">
-                    <div class="col-2 my-2 gf" data-aos="zoom-in" data-aos-offset="0" data-aos-delay="200" data-aos-duration="500" data-aos-easing="ease-in-out">Lowkey Gaspar</div>
-                    <div class="col-2 my-2 hf" data-aos="zoom-in" data-aos-offset="0" data-aos-delay="200" data-aos-duration="500" data-aos-easing="ease-in-out">Héctor Asesio</div>
+                    <div class="col-2 my-2 gf" data-aos="zoom-in" data-aos-offset="0" data-aos-delay="100" data-aos-duration="500" data-aos-easing="ease-in-out">Lowkey Gaspar</div>
+                    <div class="col-2 my-2 hf" data-aos="zoom-in" data-aos-offset="0" data-aos-delay="100" data-aos-duration="500" data-aos-easing="ease-in-out">Héctor Asesio</div>
                 </div>
                 <div class="row justify-content-center">
-                  <div class="col-8 col-md-6" data-aos="zoom-in" data-aos-offset="100" data-aos-delay="300" data-aos-duration="700" data-aos-easing="ease-in-out"> <p class="text">              El Canto nace del encuentro entre dos mentes que miran el mundo desde perspectivas similares pero con enfoques opuestos.  Gracias a ese contraste, del choque de estéticas y formas de sentir, es donde surge la verdadera creatividad. El canto de la moneda. </p>
+                  <div class="col-8 col-md-6" data-aos="zoom-in" data-aos-offset="100" data-aos-delay="100" data-aos-duration="700" data-aos-easing="ease-in-out"> <p class="text">              El Canto nace del encuentro entre dos mentes que miran el mundo desde perspectivas similares pero con enfoques opuestos.  Gracias a ese contraste, del choque de estéticas y formas de sentir, es donde surge la verdadera creatividad. El canto de la moneda. </p>
                   </div></div>
             </div>
         </div>
       </div>
 
-    <Section class="container-fluid mb-3" >
+    <Section class="container-fluid mb-5 overflow-hidden" >
       <div class="row">
         <div class="col-12 col-md-4 col-lg-3 ">
-          <img src="media/img/layout.avif" class="img-fluid float-start object-fit-fill" alt="" data-aos="fade-right" data-aos-offset="500" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out">
+          <img src="media/img/layout.avif" class="img-fluid float-start object-fit-fill" alt="" data-aos="fade-right" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out">
         </div>
         <div class="col-12 col-md-8 col-lg-3">
-          <div class="row" data-aos="fade-right" data-aos-offset="500" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
+          <div class="row" data-aos="fade-right" data-aos-offset="100" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
             <p class="text-start">
               El Canto nace del encuentro entre dos mentes que miran el mundo desde perspectivas similares pero con enfoques opuestos.  Gracias a ese contraste, del choque de estéticas y formas de sentir, es donde surge la verdadera creatividad. El canto de la moneda.
             </p>
           </div>
-          <div class="row mt-5" data-aos="fade-left" data-aos-offset="300" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
-            <p class="text-end" >
+          <div class="row mt-5" data-aos="fade-left" data-aos-offset="100" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
+            <p class="text-end align-bottom" >
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit nulla quaerat vero voluptate facere dignissimos expedita recusandae quasi neque quod libero, dicta quis inventore, enim magni velit ipsam iusto voluptatibus?
             </p>
           </div>
         </div>
         <div class="col-12 col-md-8 col-lg-6 justify-content-center mx-auto">
-          <img src="media/img/layout.avif" class="img-fluid float-end" alt="" data-aos="fade-left" data-aos-offset="500" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
+          <img src="media/img/layout.avif" class="img-fluid float-end" alt="" data-aos="fade-left" data-aos-offset="100" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
         </div>
       </div>
     </Section>
 
-    <section class="container mb-3">
+    <section class="container mb-5 overflow-hidden vh-50">
       <div class="row h-100">
         <div class="col-12 col-md-6 position-relative">
         <div class="col-6"> <img src="media/img/layout.avif" class="img-fluid" alt="" data-aos="fade-up" data-aos-offset="500" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out"></div>
@@ -84,9 +82,9 @@
       </div>
     </section>
 
-    <section class="container-fluid-g0 mb-3">
+    <section class="container-fluid-g0 mb-5 overflow-hidden">
       <div class="row position-relative">
-        <img src="media/img/layout.avif" class="img-fluid p-0" alt="" data-aos="fade-right" data-aos-offset="500" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
+        <img src="media/img/layout.avif" class="img-fluid p-0 vh-50" alt="" data-aos="fade-right" data-aos-offset="500" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
         <img src="media/img/layout.avif" class="w-25 h-50 position-absolute top-50 end-0 m-5 d-none d-md-block" alt="" data-aos="fade-left" data-aos-offset="100" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
       </div>
       <div class="row text-center">
@@ -94,7 +92,7 @@
       </div>
     </section>
 
-    <section class="container mb-3">
+    <section class="container mb-5 overflow-hidden">
       <div class="row">
         <div class="col-12 col-md-4">
           <h3 data-aos="fade-right" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out">Lorem ipsum</h3>
@@ -105,7 +103,8 @@
         </div>
       </div>
     </section>
-    <section class="container-fluid mb-3">
+
+    <section class="container-fluid mb-5 g-0 overflow-hidden">
       <div class="row gx-2">
         <div class="col-6 col-md-4"> <img src="media/img/layout.avif" class="img-fluid" alt=""></div>
         <div class="col-6 col-md-4"> <img src="media/img/layout.avif" class="img-fluid" alt=""></div>
@@ -114,7 +113,7 @@
     </section>
     
 
-    <section class="container mb-3">
+    <section class="container mb-5 overflow-hidden">
       <div class="row">
         <div class="col-12 col-md-6" data-aos="fade-right" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out">
           <img src="media/img/layout.avif" class="img-fluid" alt="">
@@ -135,12 +134,13 @@
       </div>
     </section>
 
-    <section class="container-fluid p-3">
+    <section class="container-fluid p-3 overflow-hidden">
       <div class="row justify-content-center position-relative">
         <img src="media/img/layout horizontal.jpg" class="img-fluid vh-100" alt="" data-aos="fade-up" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out">
         <img src="media/img/layout.avif" class="w-25 h-50 position-absolute top-0 end-0 m-5 d-none d-md-block" alt="" data-aos="fade-down" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out">
       </div>
     </section>
+
 <section class="footer"> 
 <footer class="footer-enhanced py-5 mt-5" data-aos="fade-up">
   <div class="container">
