--- a/project.html
+++ b/project.html
@@ -32,10 +32,15 @@
         </div>
       </nav>
 
-    <section class="container-fluid vh-100 overflow-hidden">
-        <div class="row" data-aos="zoom-in" data-aos-offset="100" data-aos-delay="50" data-aos-duration="200" data-aos-easing="ease-in-out"><h1 class="display-3">Project</h1></div>
+    <section class="container-fluid overflow-hidden">
+        <div class="row" data-aos="zoom-in" data-aos-offset="100" data-aos-delay="50" data-aos-duration="200" data-aos-easing="ease-in-out"><h1 class="display-3">ECO - Music Magazine</h1></div>
         <div class="row justify-content-center position-relative">
-            <img src="media/img/layout horizontal.jpg" class="img-fluid" alt="" data-aos="fade-right" data-aos-offset="100" data-aos-delay="100" data-aos-duration="400" data-aos-easing="ease-in-out">
+            <div class="scroll-video-container">
+                <video class="scroll-video" width="100%" height="auto" muted>
+                  <source src="media/vid/Revista Eco.mp4" type="video/mp4">
+                  Tu navegador no soporta el elemento video.
+                </video>
+            </div>
             <img src="media/img/layout.avif" class="w-25 h-50 position-absolute bottom-0 end-0 p-5 d-none d-md-block" alt="" data-aos="fade-left" data-aos-offset="100" data-aos-delay="300" data-aos-duration="400" data-aos-easing="ease-in-out">
         </div>
     </section>
@@ -43,13 +48,7 @@
     <Section class="container my-5 overflow-hidden">
         <div class="row flex-md-row flex-column-reverse">
             <div class="col-12 col-md-6">
-                <div class="scroll-video-container">
-                    <video class="scroll-video" width="100%" height="auto" muted data-aos="fade-right" data-aos-offset="100" data-aos-delay="50" data-aos-duration="400" data-aos-easing="ease-in-out">
-                      <source src="media/vid/Revista Eco.mp4" type="video/mp4">
-                      Tu navegador no soporta el elemento video.
-                    </video>
-                  </div>
-                  <div style="height:150vh"></div> <!-- Space after for scrolling demo -->
+                <img src="media/img/layout.avif" class="img-fluid" alt="" data-aos="fade-right" data-aos-offset="100" data-aos-delay="50" data-aos-duration="400" data-aos-easing="ease-in-out">
             </div>
             <div class="col-12 col-md-6">
                 <h2 data-aos="fade-left" data-aos-offset="100" data-aos-delay="100" data-aos-duration="400" data-aos-easing="ease-in-out">Lorem Ipsum</h2>
@@ -146,7 +145,6 @@
   
     <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@latest/dist/lenis.min.js"></script>
     <script src="js/lenis-init.js"></script>
-    
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
