Botones y cambio de estilo

--- a/about.html
+++ b/about.html
@@ -14,11 +14,11 @@
 
   </head>
     
-  <body class="container-fluid-g0">
+  <body class="container-fluid-g0 overflow-hidden">
     
     <nav class="navbar sticky-top bg-body-tertiary overflow-hidden">
       <div class="container-fluid">
-        <a class="navbar-brand" href="about.html">About</a>
+        <a class="navbar-brand silver" href="about.html">About</a>
         <a class="navbar-brand m-0 p-0" href="index.html">
           <div class="flip-container g-0 align-middle">
               <div class="flipper">
@@ -27,11 +27,11 @@
               </div>
           </div>
         </a>
-        <a class="navbar-brand" href="shop.html">Tienda</a>
+        <a class="navbar-brand silver" href="shop.html">Tienda</a>
       </div>
     </nav>
 
-    <section class="container justify-content-center overflow-hidden vh-100">
+    <section class="container justify-content-center overflow-hidden vh-100 d-flex align-items-center flex-column">
         <div class="row text-center"><h1 class="display-1">El</h1></div>
         <div class="row"><img src="media/img/layout horizontal.jpg" class="img-fluid vh-50" alt=""></div>
         <div class="row text-center"><h1 class="display-1">Canto</h1></div>
