--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar sticky-top bg-body-tertiary overflow-hidden">
       <div class="container-fluid">
-        <a class="navbar-brand" href="about.html">About</a>
+        <a class="navbar-brand silver" href="about.html">About</a>
         <a class="navbar-brand m-0 p-0" href="index.html">
           <div class="flip-container g-0 align-middle">
               <div class="flipper">
@@ -27,7 +27,7 @@
               </div>
           </div>
         </a>
-        <a class="navbar-brand" href="shop.html">Tienda</a>
+        <a class="navbar-brand silver" href="shop.html">Tienda</a>
       </div>
     </nav>
   
@@ -73,7 +73,7 @@
     </Section>
 
     
-    <section class="container mb-5 overflow-hidden vh-75">
+    <section class="container-xl mb-5 overflow-hidden  md-vh-75">
       <div class="row h-100">
         <div class="col-12 col-md-6 position-relative">
         <div class="col-6"> 
@@ -88,6 +88,7 @@
       <div class="col-12 col-md-6">
         <h2 data-aos="fade-up" data-aos-offset="500" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">Cervezas - La Virgen</h2>
         <p data-aos="fade-up" data-aos-offset="500" data-aos-delay="150" data-aos-duration="500" data-aos-easing="ease-in-out">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo porro, rerum expedita velit delectus dolore alias nisi. Minus similique illum sequi numquam nihil nesciunt, dolorum exercitationem quibusdam magni? Quaerat, quisquam.</p>
+        <a class="btn btn-primary" href="project.html" role="button" data-aos="fade-up" data-aos-offset="500" data-aos-delay="150" data-aos-duration="500" data-aos-easing="ease-in-out">Ver Más</a>
         </div>
       </div>
     </section>
