--- a/project.html
+++ b/project.html
@@ -19,7 +19,7 @@
     
     <nav class="navbar sticky-top bg-body-tertiary overflow-hidden">
         <div class="container-fluid">
-          <a class="navbar-brand" href="about.html">About</a>
+          <a class="navbar-brand silver" href="about.html">About</a>
           <a class="navbar-brand m-0 p-0" href="index.html">
             <div class="flip-container g-0 align-middle">
                 <div class="flipper">
@@ -28,7 +28,7 @@
                 </div>
             </div>
           </a>
-          <a class="navbar-brand" href="shop.html">Tienda</a>
+          <a class="navbar-brand silver" href="shop.html">Tienda</a>
         </div>
       </nav>
 
